--- a/Standard/OMG_OntoIOp_current-diff-all.tex
+++ b/Standard/OMG_OntoIOp_current-diff-all.tex
@@ -5816,161 +5816,81 @@ The lexical symbols of the \DOL text serialization include various \DIFdelbegin 
 \DIFdelbegin \DIFdel{Key words }\DIFdelend \DIFaddbegin \DIFadd{Keywords }\DIFaddend are always written lowercase. The following \DIFdelbegin \DIFdel{key words }\DIFdelend \DIFaddbegin \DIFadd{keywords }\DIFaddend are reserved, and are not available for use as variables or as CURIEs with no prefix\footnote{In such a case, one can still rename affected variables, or declare a prefix binding for affected CURIEs, or use absolute IRIs instead.  These rewritings do not change the semantics.}, although they can be used as parts of tokens.
 \ec
 
-\bcnew{37}
-
-%{\ttfamily %
-\lstset{escapeinside = {@}{@}}
-\begin{lstlisting}
-@\DIFdel{alignment}@
-@\DIFdel{along}@
-@\DIFdel{assuming}@
-@\DIFdel{and}@
-@\DIFdel{closed-world}@
-@\DIFdel{cofree}@
-@\DIFdel{combine}@
-@\DIFdel{cons-ext}@
-@\DIFdel{end}@
-@\DIFdel{entails}@
-@\DIFdel{entailment}@
-@\DIFdel{equivalence}@
-@\DIFdel{excluding}@
-@\DIFdel{extract}@
-@\DIFdel{free}@
-@\DIFdel{hide}@
-@\DIFdel{import}@
-@\DIFdel{in}@
-@\DIFdel{for}@
-@\DIFdel{forget}@
-@\DIFdel{interpretation}@
-@\DIFdel{keep}@
-@\DIFdel{language}@
-@\DIFdel{library}@
-@\DIFdel{logic}@
-@\DIFdel{maximize}@
-@\DIFdel{model}@
-@\DIFdel{minimize}@
-@\DIFdel{network}@
-@\DIFdel{ni}@
-@\DIFdel{of}@
-@\DIFdel{oms}@
-@\DIFdel{onto}@
-@\DIFdel{ontology}@
-@\DIFdel{refined}@
-@\DIFdel{refinement}@
-@\DIFdel{reject}@
-@\DIFdel{relation}@
-@\DIFdel{remove}@
-@\DIFdel{result}@
-@\DIFdel{reveal}@
-@\DIFdel{select}@
-@\DIFdel{separators}@
-@\DIFdel{serialization}@
-@\DIFdel{spec}@
-@\DIFdel{specification}@
-@\DIFdel{substitution}@
-@\DIFdel{then}@
-@\DIFdel{to}@
-@\DIFdel{translation}@
-@\DIFdel{using}@
-@\DIFdel{vars}@
-@\DIFdel{via}@
-@\DIFdel{view}@
-@\DIFdel{where}@
-@\DIFdel{with}@
-@\DIFdel{\%cons}@
-@\DIFdel{\%ccons}@
-@\DIFdel{\%complete}@
-@\DIFdel{\%consistent}@
-@\DIFdel{\%def}@
-@\DIFdel{\%implied}@
-@\DIFdel{\%inconsistent}@
-@\DIFdel{\%mcons}@
-@\DIFdel{\%mono}@
-@\DIFdel{\%notccons}@
-@\DIFdel{\%notmcons}@
-@\DIFdel{\%prefix}@
-@\DIFdel{\%wdef}@
-\end{lstlisting}
-%}
-
 \begin{multicols}{3}
 	
-
-\lstset{escapeinside = {@}{@}}
 \begin{lstlisting}
-@\DIFadd{alignment}@
-@\DIFadd{along}@
-@\DIFadd{assuming}@
-@\DIFadd{and}@
-@\DIFadd{closed-world}@
-@\DIFadd{cofree}@
-@\DIFadd{combine}@
-@\DIFadd{cons-ext}@
-@\DIFadd{end}@
-@\DIFadd{entails}@
-@\DIFadd{entailment}@
-@\DIFadd{equivalence}@
-@\DIFadd{excluding}@
-@\DIFadd{extract}@
-@\DIFadd{free}@
-@\DIFadd{hide}@
-@\DIFadd{import}@
-@\DIFadd{in}@
-@\DIFadd{for}@
-@\DIFadd{forget}@
-@\DIFadd{interpretation}@
-@\DIFadd{keep}@
-@\DIFadd{language}@
-@\DIFadd{library}@
-@\DIFadd{logic}@
-@\DIFadd{maximize}@
-@\DIFadd{model}@
-@\DIFadd{minimize}@
-@\DIFadd{network}@
-@\DIFadd{ni}@
-@\DIFadd{of}@
-@\DIFadd{oms}@
-@\DIFadd{onto}@
-@\DIFadd{ontology}@
-@\DIFadd{refined}@
-@\DIFadd{refinement}@
-@\DIFadd{reject}@
-@\DIFadd{relation}@
-@\DIFadd{remove}@
-@\DIFadd{result}@
-@\DIFadd{reveal}@
-@\DIFadd{select}@
-@\DIFadd{separators}@
-@\DIFadd{serialization}@
-@\DIFadd{spec}@
-@\DIFadd{specification}@
-@\DIFadd{substitution}@
-@\DIFadd{then}@
-@\DIFadd{to}@
-@\DIFadd{translation}@
-@\DIFadd{using}@
-@\DIFadd{vars}@
-@\DIFadd{via}@
-@\DIFadd{view}@
-@\DIFadd{where}@
-@\DIFadd{with}@
-@\DIFadd{\%cons}@
-@\DIFadd{\%ccons}@
-@\DIFadd{\%complete}@
-@\DIFadd{\%consistent}@
-@\DIFadd{\%def}@
-@\DIFadd{\%implied}@
-@\DIFadd{\%inconsistent}@
-@\DIFadd{\%mcons}@
-@\DIFadd{\%mono}@
-@\DIFadd{\%notccons}@
-@\DIFadd{\%notmcons}@
-@\DIFadd{\%prefix}@
-@\DIFadd{\%wdef}@
+alignment
+along
+assuming
+and
+closed-world
+cofree
+combine
+cons-ext
+end
+entails
+entailment
+equivalence
+excluding
+extract
+free
+hide
+import
+in
+for
+forget
+interpretation
+keep
+language
+library
+logic
+maximize
+model
+minimize
+network
+ni
+of
+oms
+onto
+ontology
+refined
+refinement
+reject
+relation
+remove
+result
+reveal
+select
+separators
+serialization
+spec
+specification
+substitution
+then
+to
+translation
+using
+vars
+via
+view
+where
+with
+%cons
+%ccons
+%complete
+%consistent
+%def
+%implied
+%inconsistent
+%mcons
+%mono
+%notccons
+%notmcons
+%prefix
+%wdef
 \end{lstlisting}
 %}
 \end{multicols}
-\ecnew
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
